# Labs_Cpp

./: CMakeLists.txt
src/Lab1/class/: main.cpp
src/Lab1/struct/: main.cpp
src/Lab2/: main.cpp
src/Lab3/: main.cpp
src/Lab4/: main.cpp
src/Lab5/: main.cpp
src/Lab6/: main.cpp
src/Lab7/: main.cpp
src/Lab8/: Res.txt  main.cpp
src/Lab8/FirstTask/: Res.txt  main.cpp
src/Lab8/SecondTask/: main.cpp
