cmake_minimum_required(VERSION 3.17)
project(Labs_Cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(Lab1_1 src/Lab1/class/main.cpp)
add_executable(Lab1_2 src/Lab1/struct/main.cpp)
add_executable(Lab2 src/Lab2/main.cpp)
add_executable(Lab3 src/Lab3/main.cpp)
add_executable(Lab4 src/Lab4/main.cpp)
add_executable(Lab5 src/Lab5/main.cpp)
add_executable(Lab6 src/Lab6/main.cpp)
add_executable(Lab7 src/Lab7/main.cpp)
add_executable(Lab8 src/Lab8/main.cpp)